@@ -1,3 +1,13 @@
+2012-10-14  Patrick Gansterer  <paroga@webkit.org>
+
+        Unreviewed, rolling out r130656.
+        http://trac.webkit.org/changeset/130656
+        https://bugs.webkit.org/show_bug.cgi?id=97592
+
+        Broke CMake build on Windows
+
+        * CMakeLists.txt:
+
 2012-10-12  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r131189.
